--- a/web.config
+++ b/web.config
@@ -2,8 +2,8 @@
     <configuration>
         <system.webServer>
         <staticContent>
-            <mimeMap fileExtenstion=".json" mimeType="application/json" />
-            <mimeMap fileExtenstion=".mp4" mimeType="video/mp4" />
+            <mimeMap fileExtension=".json" mimeType="application/json" />
+            <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
         </staticContent>
         <httpProtocol>
     <customHeaders>
