--- a/web.config
+++ b/web.config
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
-    <configuration>
-        <system.webServer>
+<configuration>
+    <system.webServer>
         <staticContent>
             <mimeMap fileExtension=".json" mimeType="application/json" />
-            <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
+            <mimeMap fileExtension=" .mp4" mimeType="video/mp4" />
         </staticContent>
         <httpProtocol>
-    <customHeaders>
-        <add name="Access-Control-Allow-Origin" value="*" />
-</httpProtocol>
-</customHeaders>
-</system.webServer>
-</configuration>
+            <customHeaders>
+                <add name="Access-Control-Allow-Origin" value="*" />
+                \</customHeaders>
+               </httpProtocol>
+            </system.webServer>
+    </configuration>
